fix: overflow x

--- a/front/src/app/globals.css
+++ b/front/src/app/globals.css
@@ -10,7 +10,7 @@ body {
   box-sizing: border-box;
   position: relative;
   background: #020202;
-  overflow: hidden;
+  overflow-x: hidden;
 }
 .gridy {
   background-image: linear-gradient(
